# notes

./: .gitignore  README.md  pyproject.toml  todo
algo/top25/: README.md
algo/top25/01-binary-search/: README.md  binary_search.py  test-binary-search.py  test_binary_search.py
bash/: README.md
coursera - sf architecture & design/: README.md  airline-reservation-activity.plantuml  planes-state.plantuml  sharing-app-activity.plantuml
coursera-object-oriented-design/: README.md
ddd/culttt/: README.md
ddd/dzone/: README.md
ddd/fowler/: README.md  ddd.md
ddd/sairyss-ddd/: README.md
design-ms-the-righ-way.md/: README.md  design-ms-the-right-way.md
docker/: README.md
fowler/: ddd.md
neetcode/: big-o.md
process-thread-etc/: readme.md
python/: TODO-async.md  gil.md  simple-server.md
python/async-sync/: README.md  masnun-1.md  masnun-2.md  masnun-3.md
python/celery/: exec-pool.md
python/enum/: enum_dynamic_members.py
python/gil/: README.md
python/typevar-union/: README.md
refactoring-guru/: README.md  inheritance-caveats.md  oop.md
refactoring-guru/relations/: aggregation.py  composition.py  dependency.py  implementation.py  inheritance.py  relation.py
refactoring-guru/solid/: liskov_param_type.py  liskov_return_type.py  open_close_order_after.py  open_close_order_before.py  solid.md
refactoring-guru/uml/: uml.md
sairyss-ddd/: README.md
sre-dg/: README.md
